--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,15 @@
       <artifactId>jsr250-api</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+    <groupId>org.hibernate.javax.persistence</groupId>
+    <artifactId>hibernate-jpa-2.1-api</artifactId>
+    <version>1.0.0.Final</version>
+	</dependency>
+	<dependency>
+    <groupId>javax</groupId>
+    <artifactId>javaee-api</artifactId>
+    <version>7.0</version>
+</dependency>
   </dependencies>
 </project>
