--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
-	<display-name>xstore</display-name>
+	<display-name>casadocodigo</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
@@ -17,4 +17,26 @@
 		<param-name>org.omnifaces.CACHE_SETTING_APPLICATION_TTL</param-name>
 		<param-value>900</param-value>
 	</context-param>
+
+	<security-constraint>
+		<display-name>Administration</display-name>
+		<web-resource-collection>
+			<web-resource-name>administration</web-resource-name>
+			<description>URLs que levam para a adminstração da loja</description>
+			<url-pattern>/admin/*</url-pattern>
+			<http-method>GET</http-method>
+			<http-method>POST</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>ADMIN</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<form-login-config>
+			<form-login-page>/usuarios/login.xhtml</form-login-page>
+			<form-error-page>/usuarios/login.xhtml</form-error-page>
+		</form-login-config>
+	</login-config>
 </web-app>
