--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>br.com.casadocodigo</groupId>
-	<artifactId>casadocodigo</artifactId>
+	<groupId>br.com.xstore</groupId>
+	<artifactId>xstore</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<build>
-		<finalName>casadocodigo</finalName>
+		<finalName>xstore</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
